--- a/asset/index.css
+++ b/asset/index.css
@@ -1,3 +1,25 @@
-.oxmod-stock-analysis{
-/* CSS */
- }
+.oxmod-stock-analysis {
+  /* CSS */
+}
+.oxmod-stock-analysis .maintable {
+  width: 100%;
+  border-top: solid 1px #ccc;
+  border-right: solid 1px #ccc;
+}
+.oxmod-stock-analysis .maintable td {
+  border-bottom: solid 1px #ccc;
+  border-left: solid 1px #ccc;
+  padding: 2px 10px;
+}
+.oxmod-stock-analysis .maintable tr:nth-child(2n-1) td {
+  background-color: #eee;
+}
+.oxmod-stock-analysis .maintable thead th {
+  border-bottom: solid 1px #999;
+  border-left: solid 1px #999;
+  background-color: #999;
+  line-height: 2;
+}
+.oxmod-stock-analysis .maintable td {
+  line-height: 1.6;
+}
