--- a/asset/index.less
+++ b/asset/index.less
@@ -5,18 +5,23 @@
     border-top:solid 1px #ccc;
     border-right:solid 1px #ccc;
     td{
-
+      font-size:13px;
       border-bottom:solid 1px #ccc;
       border-left:solid 1px #ccc;
-      padding:2px 10px;
+      padding:2px 5px;
     }
+
     tr:nth-child(2n-1){
       td{
         background-color: #eee;
       }
     }
+    tr:hover>td{
+      background-color: rgba(100,100,120,.8);
+    }
     thead{
       th{
+        font-size:14px;
         border-bottom:solid 1px #999;
         border-left:solid 1px #999;
         background-color: #999;
