--- a/asset/index.less
+++ b/asset/index.less
@@ -2,13 +2,12 @@
 /* CSS */
   .maintable{
     width:100%;
-    border-top:solid 1px #ccc;
-    border-right:solid 1px #ccc;
     td{
-      font-size:13px;
+      font-size:16px;
       border-bottom:solid 1px #ccc;
-      border-left:solid 1px #ccc;
+
       padding:2px 5px;
+      height: 34px;
     }
 
     tr:nth-child(2n-1){
@@ -31,5 +30,22 @@
     td{
       line-height: 1.6;
     }
+  }
+  .percent{
+    display: inline-block;
+    min-width:70px;
+    height:24px;
+    color:#fff;
+    font-style: normal;
+    border-radius: 5px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 24px;
+  }
+  .positive{
+    background-color:#f00;
+  }
+  .negative{
+    background-color:#0c0;
   }
  }
