--- a/asset/index.less
+++ b/asset/index.less
@@ -15,8 +15,9 @@
         background-color: #eee;
       }
     }
-    tr:hover>td{
+    tr:hover>td,tr.selected>td{
       background-color: rgba(100,100,120,.8);
+      color:#fff;
     }
     thead{
       th{
