--- a/asset/index.css
+++ b/asset/index.css
@@ -13,8 +13,10 @@
 .oxmod-stock-analysis .maintable tr:nth-child(2n-1) td {
   background-color: #eee;
 }
-.oxmod-stock-analysis .maintable tr:hover > td {
+.oxmod-stock-analysis .maintable tr:hover > td,
+.oxmod-stock-analysis .maintable tr.selected > td {
   background-color: rgba(100, 100, 120, 0.8);
+  color: #fff;
 }
 .oxmod-stock-analysis .maintable thead th {
   font-size: 14px;
