--- a/asset/index.less
+++ b/asset/index.less
@@ -1,5 +1,5 @@
 .oxmod-stock-analysis{
-/* CSS */
+  /* CSS */
   .maintable{
     width:100%;
     td{
@@ -15,7 +15,7 @@
         background-color: #eee;
       }
     }
-    tr:hover>td,tr.selected>td{
+    tr.selected>td{
       background-color: rgba(100,100,120,.8);
       color:#fff;
     }
